# habit-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_habit_last_reminder_sent_at.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
